<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg10"
    tools:context="comsci.adoublelz.myfirstapp.TestLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMe"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/h1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/imvMyPic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/test1" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/my_margin"
        android:layout_marginRight="@dimen/my_margin"
        android:background="#64ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/imvMyPic"
        android:id="@+id/scrollView2"
        android:layout_marginStart="@dimen/my_margin"
        android:layout_marginEnd="@dimen/my_margin"
        app:layout_constraintHorizontal_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/my_margin"
                android:text="@string/name"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/h3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/my_margin"
                android:text="@string/idstu"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/h3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/my_margin"
                android:text="@string/comsi"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/h3" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/my_margin"
                android:onClick="facebook"
                android:text="@string/facebook"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/h3" />

            <TextView
                android:id="@+id/txtTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/my_margin"
                android:text="@string/tel"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/h3" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button5"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onclickBack"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
